completion of page styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a290182793.js"></script>
     <title>BJ Host</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./img/hdchostlogo.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/a290182793.js"></script>
 </head>
 
 <body>
@@ -16,14 +17,123 @@
             <a class="logo" href="#"><img src="./img/hdchostlogo.png" alt=""></a>
             <nav class="links">
                 <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#planos">PLANOS</a></li>
-                    <li><a href="#planos">CONTATO</a></li>
+                    <li><a href="#home">HOME</a>
+                    </li>
+                    <li><a href="#plans">PLANOS</a>
+                    </li>
+                    <li><a href="#concact">CONTATO</a>
+                    </li>
                     <a href="#" class="btn-login">LOGIN</a>
                 </ul>
             </nav>
         </header>
-        <section class="banner"></section>
+        <section class="banner">
+            <div class="text-banner">
+                <h1>
+                    BJ Host
+                </h1>
+                <p>Os melhores planos para qualquer tipo de projeto!</p>
+            </div>
+            <div class="bg-banner">
+
+            </div>
+        </section>
+        <main>
+            <section class="speciealties-container">
+
+                <ul>
+                    <li>
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Segurança</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-rocket"></i>
+                        <h3>Velocidade</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-comments"></i>
+                        <h3>Suporte</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla, in fringilla arcu.</p>
+                    </li>
+                </ul>
+
+            </section>
+            <section id="plans" class="pricing-container">
+                <h1>Planos e Preços</h1>
+                <p>Selecione o plano perfeito para você</p>
+                <div class="plans-container">
+                    <div class="plan plan1">
+                        <ul>
+                            <li class="price">R$ 15/mês</li>
+                            <li class="Plan-name">Padrão</li>
+                            <li>2GB de espaço em disco</li>
+                            <li>10 Sub-dominios</li>
+                            <li>25 Contas de e-mail</li>
+                            <li>C-panel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="select"><a href="#" class="btn-select">Selecionar</a></li>
+                        </ul>
+                    </div>
+                    <div class="plan plan2">
+                        <ul>
+                            <li class="price">R$ 30/mês</li>
+                            <li class="Plan-name">Dedicado</li>
+                            <li>5GB de espaço em disco</li>
+                            <li>20 Sub-dominios</li>
+                            <li>50 Contas de e-mail</li>
+                            <li>C-panel</li>
+                            <li>Suporte 24/7</li>
+                            <li> <a href="#" class="btn-select">Selecionar</a></li>
+                        </ul>
+                    </div>
+                    <div class="plan plan3">
+                        <ul>
+                            <li class="price recommend">R$50/mês</li>
+                            <li class="Plan-name ">Dedicado Plus</li>
+                            <li>10GB de espaço em disco</li>
+                            <li>100 Sub-dominios</li>
+                            <li>100 Contas de e-mail</li>
+                            <li>C-panel</li>
+                            <li>Suporte 24/7</li>
+                            <li> <a href="#" class="btn-select btn-recommend recommend ">Selecionar</a></li>
+                        </ul>
+                    </div>
+                    <div class="plan plan4">
+                        <ul>
+                            <li class="price">R$100/mês</li>
+                            <li class="Plan-name">Cloud</li>
+                            <li>20GB de espaço em disco</li>
+                            <li>200 Sub-dominios</li>
+                            <li>200 Contas de e-mail</li>
+                            <li>C-panel</li>
+                            <li>Suporte 24/7</li>
+                            <li> <a href="#" class="btn-select">Selecionar</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="search-domain">
+                <h2>Buscar um domínio</h2>
+                <p>Veja se o domínio que você deseja está disponível</p>
+                <input type="text" placeholder="Digite seu domínio desejado ">
+                <input type="submit" value="Buscar Domínio">
+            </section>
+            <section class="concact-container" id="concact">
+                <h2>Entre em contato</h2>
+                <p>Mande uma mensagem para nós conversarmos sobre a melhor hospedagem para seu negócio</p>
+                <form action="">
+                    <input type="text" name="name" id="" placeholder="Seu nome">
+                    <input type="email" name="email" placeholder="Seu e-mail">
+                    <textarea name="message" id="" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>BJ Host @2021</p>
+        </footer>
     </div>
 </body>
 
