styling for mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
     <div class="container">
         <header>
             <a class="logo" href="#"><img src="./img/hdchostlogo.png" alt=""></a>
-            <nav class="links">
+            <div class="menu-hamburguer">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <nav class="mobile ">
+
+                <ul>
+                    <li><a href="#home">HOME</a>
+                    </li>
+                    <li><a href="#plans">PLANOS</a>
+                    </li>
+                    <li><a href="#concact">CONTATO</a>
+                    </li>
+                    <a href="#" class="btn-login">LOGIN</a>
+                </ul>
+            </nav>
+            <nav class="links menu">
                 <ul>
                     <li><a href="#home">HOME</a>
                     </li>
