--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <div class="container">
         <header>
             <a class="logo" href="#"><img src="./img/hdchostlogo.png" alt=""></a>
-            <div class="menu-hamburguer">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
+            <div class="menu-hamburguer" id="btn-menu">
+                <div class="line line1"></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
             </div>
             <nav class="mobile ">
-
                 <ul>
                     <li><a href="#home">HOME</a>
                     </li>
@@ -29,7 +28,7 @@
                     </li>
                     <li><a href="#concact">CONTATO</a>
                     </li>
-                    <a href="#" class="btn-login">LOGIN</a>
+                    <a href="" class="btn-login">LOGIN</a>
                 </ul>
             </nav>
             <nav class="links menu">
@@ -44,7 +43,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="banner">
+        <section class="banner" id="home">
             <div class="text-banner">
                 <h1>
                     BJ Host
@@ -152,6 +151,7 @@
             <p>BJ Host @2021</p>
         </footer>
     </div>
+    <script src="./main.js"></script>
 </body>
 
 </html>
