--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <section class="concact-container" id="concact">
                 <h2>Entre em contato</h2>
                 <p>Mande uma mensagem para nós conversarmos sobre a melhor hospedagem para seu negócio</p>
-                <form method="POST" name="contact" netlify>
+                <form method="POST" action="./success" name="contact" netlify>
                     <input type="text" name="name" id="" placeholder="Seu nome">
                     <input type="email" name="email" placeholder="Seu e-mail">
                     <textarea name="message" id="" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
